GUI: Added autofocus on text panel Added hint for allowed characters Added filter for unsupported characters

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -18,12 +18,13 @@ function send() {
     }));
 }
 
-var ENTER_KEY_CODE = 13;
+var KEY_CODE_ENTER = 13;
 function onTextInput(event) {
     var key = event.keyCode;
+    var keyStr = event.key.toUpperCase();
 
     // If the user has pressed enter
-    if (key === ENTER_KEY_CODE) {
+    if (key === KEY_CODE_ENTER) {
         send();
 
         // Prevent newline in text area
@@ -31,6 +32,21 @@ function onTextInput(event) {
         return false;
     }
     else {
+        if (keyStr >= "A" && keyStr <= "Z") {
+            // Ok
+        }
+        else if (keyStr >= "0" && keyStr <= "9") {
+            // Ok
+        }
+        else if (keyStr == " ") {
+            // Ok
+        }
+        else {
+            // Unsupported character, don't add to text area
+            event.preventDefault();
+            return false;
+        }
+
         return true;
     }
 }
@@ -76,7 +92,7 @@ window.onload = function() {
     <div class="main-panel">
         <h1 id="title" class="title">Operation MORSELED</h1>
 
-        <textarea id="text-panel" class="text-panel" onkeypress="onTextInput(event)"></textarea>
+        <textarea id="text-panel" class="text-panel" onkeypress="onTextInput(event)" autofocus="true" placeholder="Allowed characters are A to Z and 0 to 9"></textarea>
         <br>
 
         <button class="send-button" onclick="send()">Send</button>
